# serializer version: 1
# name: test_api_not_ok_entities_stay_the_same_as_before
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
  ])
# ---
# name: test_api_throws_response_entities_stay_the_same_as_before
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
  ])
# ---
# name: test_devices_creaction_ok[device]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'iotty',
        'TestLS',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'iotty',
    'model': None,
    'model_id': None,
    'name': '[TEST] Light switch 0 (TEST_SERIAL_0)',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices_creaction_ok[entity-ids]
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
  ])
# ---
# name: test_devices_creaction_ok[entity]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_light_switch_0_test_serial_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'iotty',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'TestLS',
    'unit_of_measurement': None,
  })
# ---
# name: test_devices_creaction_ok[state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': '[TEST] Light switch 0 (TEST_SERIAL_0)',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_light_switch_0_test_serial_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_devices_deletion_ok
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
  ])
# ---
# name: test_devices_deletion_ok.1
  list([
    'switch.test_light_switch_0_test_serial_0',
  ])
# ---
# name: test_devices_insertion_ok
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
  ])
# ---
# name: test_devices_insertion_ok.1
  list([
    'switch.test_light_switch_0_test_serial_0',
    'switch.test_light_switch_1_test_serial_1',
    'switch.test_light_switch_2_test_serial_2',
  ])
# ---
# name: test_setup_entry_ok_nodevices
  list([
  ])
# ---
